cmake_minimum_required(VERSION 3.7)
project(hw)
add_subdirectory("${PROJECT_SOURCE_DIR}/q1" "${PROJECT_SOURCE_DIR}/q1/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q2" "${PROJECT_SOURCE_DIR}/q2/cmake-build")
add_subdirectory("${PROJECT_SOURCE_DIR}/q3" "${PROJECT_SOURCE_DIR}/q3/cmake-build")
